--- a/package.json
+++ b/package.json
@@ -36,12 +36,15 @@
     "@swimlane/ngx-datatable": "^20.0.0",
     "angular-archwizard": "^7.0.0",
     "angular-cropperjs": "^1.0.2",
+    "angular-material": "^1.2.5",
     "animate.css": "^4.1.1",
     "apexcharts": "^3.32.1",
     "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.8.3",
     "chart.js": "^3.7.0",
     "cropperjs": "^1.5.12",
     "feather-icons": "^4.28.0",
+    "font-awesome": "^4.7.0",
     "leaflet": "^1.8.0",
     "metismenujs": "^1.3.1",
     "ng-apexcharts": "^1.6.0",
